--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -12,3 +12,88 @@
 .img-btn:hover {
   opacity: .3;
 }
+
+main {
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+
+.logo,
+.logo-cite {
+  margin-left: 10px;
+}
+
+main {
+  padding-right: 10px;
+}
+
+.login {
+  margin-right: 10px;
+}
+
+.logo-cite {
+  font-size: 8px;
+  margin-top: -30px;
+}
+
+p {
+  font-size: 18px;
+}
+
+.bg-nav {
+  background-color: #96d1fb;
+}
+
+main {
+  background-color: #e3f2fd;
+}
+
+.title {
+  font-size: 48px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/******** CSS STYLING FOR DETAILS PAGE *********/
+
+.record-name {
+  font-size: 42px;
+}
+
+.record-display {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 40px
+}
+
+.record-info1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.hot-logo {
+  color: red;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.rating-p,
+.hot-p {
+  font-size: 12px;
+}
+
+.record-ratings-tags {
+  margin-top: 5px;
+}
+
+/***********************************************/
