--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,5 +1,11 @@
 html {
-  background-color: #96d1fb;
+  background-color: #c3e6ff;
+}
+
+.home,
+footer,
+header {
+  min-width: 835px;
 }
 
 .container {
@@ -7,12 +13,29 @@ html {
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: 30px
+  gap: 30px;
 }
 
 .img-btn {
   background: none;
   border: none
+}
+
+.catalog-queries aside {
+  width: 220px;
+  margin-top: -20px;
+}
+
+.catalog-queries {
+  margin-right: 20px;
+}
+
+.home-body h2 {
+  margin-bottom: 40px;
+}
+
+.catalog-sect {
+  margin-top: 200px;
 }
 
 .insert-entry:hover,
@@ -79,6 +102,10 @@ main {
   justify-content: center;
 }
 
+.no-tags-alert p {
+  margin: 0;
+}
+
 .filter-list {
   list-style-type: none
 }
@@ -135,6 +162,8 @@ main {
   justify-content: center;
   align-items: center;
   gap: 5px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .tag-display {
@@ -162,11 +191,20 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
-.new-entry p {
+.new-entry .p-cite-new-entry {
   margin: 0;
   margin-top: -60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.p-cite-new-entry {
+  margin: 0;
 }
 
 .new-entry img {
@@ -174,8 +212,95 @@ main {
 }
 
 .new-entry cite {
-  margin-top: 50px;
   font-size: 10px;
+}
+
+.a-icon-style {
+  text-decoration: none;
+  font-size: 32px;
+}
+
+.footer-top-sect {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid white
+}
+
+.footer-p {
+  padding: 0;
+  padding-top: 10px;
+}
+
+.section-footer-2 {
+  margin-top: 20px;
+}
+
+.section-2 h6 {
+  margin-top: 10px;
+  margin-bottom: 16px;
+  padding-left: 20px;
+}
+
+.about-us-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 60px;
+  min-width: 695px;
+}
+
+.section-2 {
+  margin-top: 20px;
+  padding-left: 5px;
+}
+
+.section-3 {
+  background-color: #c3e6ff;
+  margin-right: -10px;
+  margin-bottom: -10px;
+  margin-left: -10px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-3 p {
+  max-width: 1200px;
+}
+
+.description-citation,
+.definition-citation {
+  margin-top: -15px;
+}
+
+.def-edit-mg {
+  margin-left: 10px;
+}
+
+.details-entry h2 {
+  margin-bottom: 20px;
+}
+
+
+.definition-edit {
+  margin-left: 5px;
+}
+
+.tags-group {
+  margin-bottom: 10px;
+  min-height: 60px;
+}
+
+.definition-group,
+.example-group,
+.description-group {
+  margin-bottom: 40px;
 }
 
 
@@ -215,7 +340,28 @@ main {
 
 .rating-p,
 .hot-p {
-  font-size: 8px;
+  font-size: 14px;
+  font-style: italic;
+  color: rgb(0, 0, 0);
+}
+
+.filter-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 7px;
+  min-height: 20px;
+}
+
+.filter-list span {
+  margin-bottom: 3px;
+}
+
+.filter-list .exit-filter {
+  background-color: #ffffff;
+  padding: 2px;
+  border-radius: 10%;
 }
 
 .record-ratings-tags {
@@ -226,11 +372,23 @@ main {
 }
 
 .bg-tag-color {
-  background-color: rgb(214, 168, 0);
+  background-color: rgb(0, 50, 214);
 }
 
 .bg-tag-color-2 {
-  background-color: rgb(218, 134, 39);
+  background-color: rgb(0, 82, 175);
+}
+
+cite a,
+.resource-link-show,
+.login_home,
+.go-home {
+  color: rgb(0, 79, 157)
+}
+
+.hot-caption,
+.rating-caption {
+  color: rgb(0, 0, 0);
 }
 
 .tag-mg {
@@ -287,6 +445,7 @@ main {
   align-self: center;
 }
 
+
 /***********************************************/
 
 /******************details/edit********************/
@@ -297,6 +456,19 @@ main {
   padding-bottom: 0;
   align-self: center;
   margin-bottom: 20px;
+}
+
+.delete-btn {
+  border-radius: 10%;
+}
+
+.delete-btn span {
+  color: rgb(190, 0, 0)
+}
+
+.delete-div {
+  display: flex;
+  justify-content: center;
 }
 
 .record-name-group {
@@ -346,9 +518,12 @@ main {
 
 .tags-group-edit {
   display: flex;
-  flex-direction: column;
-  max-height: 100px;
+  flex-direction: row;
   flex-wrap: wrap;
+}
+
+.add-tag {
+  min-width: 320px;
 }
 
 .tag-x:hover {
@@ -370,6 +545,56 @@ main {
   margin-top: 20px;
 }
 
+.entry-insert label,
+.details-entry label {
+  font-size: 18px;
+}
+
+.form-name .btn-submit,
+.form-definition .btn-submit,
+.form-example .btn-submit,
+.form-description .btn-submit,
+.form-resource .btn-submit {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.form-resource .btn-submit,
+.form-name .btn-submit {
+  max-width: 300px;
+}
+
+.form-definition .btn-submit,
+.form-example .btn-submit {
+  max-width: 600px;
+}
+
+.form-description .btn-submit {
+  max-width: 600px;
+}
+
+.url-section {
+  margin-top: 15px;
+}
+
+.password-group,
+.username-group {
+  display: flex;
+  align-items: center;
+  gap: 5px
+}
+
+.password-group {
+  margin-top: 20px;
+}
+
+.align-right {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+  max-width: 390px;
+}
 
 /***********************************************/
 
@@ -393,13 +618,79 @@ div .non-login-msg {
   margin: 0
 }
 
+.input-group-1 {
+  margin-bottom: 15px;
+}
+
+.input-group-1 .text,
+.input-group-1 .text-num,
+.input-group-1 textarea {
+  border: 1px solid rgb(125, 125, 125);
+}
+
+.radio-label,
+.check-label {
+  font-weight: 300;
+}
+
+.head-label {
+  font-weight: 500;
+}
+
+form .text,
+form .text-num {
+  max-width: 300px;
+}
+
+form .text-area {
+  max-width: 600px;
+}
+
+form .media-upload {
+  display: flex;
+  flex-direction: column;
+}
+
+form .media-upload input {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.input-group-1 small {
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.input-group-1 .text-num {
+  max-width: 75px;
+}
+
+.p-label {
+  margin: 0;
+}
+
+.radio-input,
+.check-input {
+  margin-left: 5px;
+}
+
+.insert-form .submit-btn {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.insert-form {
+  max-width: 600px;
+}
+
+.example-citation {
+  margin-top: -8px;
+}
+
 /***********************************************/
 
 /**************Login Page*********************/
 
-.success-login-msg strong {
-  color: rgb(1, 104, 1);
-}
 
 .success-login-msg {
   font-size: 24px;
