--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,7 +1,11 @@
 html {
   background-color: #c3e6ff;
+  font-family: 'Century Gothic', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+p, label, span {
+  font-family: 'Century Gothic', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
 .container {
   display: flex;
@@ -248,6 +252,10 @@ main {
   padding-top: 10px;
 }
 
+.github-cornell {
+  color: #B31B1B
+}
+
 .section-footer-2 {
   margin-top: 20px;
 }
@@ -306,7 +314,6 @@ main {
   margin-bottom: 20px;
 }
 
-
 .definition-edit {
   margin-left: 5px;
 }
@@ -345,6 +352,17 @@ main {
   background-color: #0275d8 !important
 }
 
+.btn-edit {
+  color: white !important;
+  border: none !important;
+}
+
+.btn-edit:hover {
+  color: rgb(255, 211, 129) !important;
+  opacity: .8 !important;
+}
+
+
 .header-right {
   display: flex;
   flex-direction: row;
@@ -357,6 +375,11 @@ header {
   flex-direction: row;
   justify-content: space-between;
 }
+
+.alert-log-in-home {
+  max-width: 600px;
+}
+
 
 
 /******** CSS STYLING FOR DETAILS PAGE *********/
@@ -498,6 +521,31 @@ cite a,
   align-self: center;
 }
 
+.dictionary-gpt-ai {
+  margin-bottom: 30px;
+}
+
+.gpt-insert-form .header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px
+}
+.gpt-insert-form .header img {
+  padding-bottom: 7px
+}
+
+.gpt-insert-form .submit {
+  margin-top: 10px;
+  width: 300px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.card-body {
+  max-width: 700px;
+  background-color: #0275d8;
+}
 
 /***********************************************/
 
@@ -526,7 +574,7 @@ cite a,
 }
 
 .delete-btn span {
-  color: rgb(190, 0, 0)
+  color: rgb(255, 255, 255)
 }
 
 .delete-div {
@@ -576,7 +624,9 @@ cite a,
   padding-top: 15px;
   margin-right: 20px;
   background: none;
-  border: none
+  border: none;
+  color: red;
+  font-weight: 800
 }
 
 .tags-group-edit {
